# $KTH: Makefile.am,v 1.2 2000/11/05 17:16:24 joda Exp $

include $(top_srcdir)/Makefile.am.common

if OTP
dir_otp = otp
endif

SUBDIRS	=					\
	afsutil					\
	bsd					\
	ftp					\
	kauth					\
	kip					\
	kx					\
	movemail				\
	$(dir_otp)				\
	popper					\
	push					\
	sample					\
	telnet					\
	xnlock					\
