# $KTH: Makefile.am,v 1.3 2001/09/17 01:06:32 assar Exp $

include $(top_srcdir)/Makefile.am.common

if OTP
dir_otp = otp
endif

SUBDIRS	=					\
	afsutil					\
	bsd					\
	ftp					\
	kauth					\
	kip					\
	kx					\
	movemail				\
	$(dir_otp)				\
	popper					\
	push					\
	sample					\
	telnet					\
	xnlock
