# $KTH: Makefile.am,v 1.2 2000/11/05 17:16:32 joda Exp $

include $(top_srcdir)/Makefile.am.common

AUTOMAKE_OPTIONS += no-texinfo.tex

info_TEXINFOS = kth-krb.texi

kth_krb_TEXINFOS = \
	ack.texi				\
	index.texi				\
	install.texi				\
	intro.texi				\
	otp.texi				\
	problems.texi				\
	setup.texi				\
	whatis.texi
